--- a/hasura/.env.example
+++ b/hasura/.env.example
@@ -4,4 +4,5 @@ POSTGRES_DB="postgres"
 POSTGRES_USER="postgres"
 POSTGRES_PASSWORD="postgrespassword"
 HASURA_GRAPHQL_ADMIN_SECRET="hasuraadminpassword"
+HASURA_STAGING_ENDPOINT="http://localhost:8080"
 HASURA_GRAPHQL_JWT_SECRET=
