There was a mistake in hasura docker-compose, was using HS512 instead of 256,

--- a/hasura/metadata/databases/default/tables/public_users.yaml
+++ b/hasura/metadata/databases/default/tables/public_users.yaml
@@ -16,3 +16,15 @@ array_relationships:
         table:
           schema: public
           name: sessions
+select_permissions:
+  - role: user
+    permission:
+      columns:
+        - email
+        - image
+        - name
+        - emailVerified
+        - id
+      filter:
+        id:
+          _eq: X-Hasura-User-Id
