--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,15 +22,14 @@
     "graphql-request": "^4.3.0",
     "jsonwebtoken": "^9.0.0",
     "next": "latest",
-    "next-auth": "^4.18.6",
+    "next-auth": "latest",
     "next-auth-hasura-adapter": "^1.0.4",
     "nodemailer": "^6",
-    "pg": "^8.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.5.9",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/node": "^17",
     "@types/react": "^18.0.15",
     "typescript": "^4"
