--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -1,6 +1,6 @@
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=<The JWT secret set in Hasura>
-GITHUB_ID=<Github OAuth Client ID>
-GITHUB_SECRET=<Github OAuth Secret>
+GOOGLE_CLIENT_ID=<Google OAuth Client ID>
+GOOGLE_CLIENT_SECRET=<Google OAuth Secret>
 HASURA_PROJECT_ENDPOINT=http://localhost:8080/v1/graphql
 HASURA_ADMIN_SECRET=<Chosen Hasura Admin secret>
