Add e-mail sign in

--- a/frontend/.env.local.example
+++ b/frontend/.env.local.example
@@ -2,5 +2,7 @@ NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=<The JWT secret set in Hasura>
 GOOGLE_CLIENT_ID=<Google OAuth Client ID>
 GOOGLE_CLIENT_SECRET=<Google OAuth Secret>
+EMAIL_SERVER=smtp://username:password@smtp.example.com:587
+EMAIL_FROM=noreply@example.com
 HASURA_PROJECT_ENDPOINT=http://localhost:8080/v1/graphql
 HASURA_ADMIN_SECRET=<Chosen Hasura Admin secret>
