--- a/hasura/Makefile
+++ b/hasura/Makefile
@@ -11,11 +11,10 @@ jwt:
 	openssl rand -hex 32 >> ${REPO}/.env 2>&1 &
 
 console:
-	npx hasura-cli console --admin-secret ${HASURA_GRAPHQL_ADMIN_SECRET}
+	npx hasura console --admin-secret ${HASURA_GRAPHQL_ADMIN_SECRET}
 
-migrate:
-	npx hasura-cli migrate apply --endpoint ${HASURA_STAGING_ENDPOINT} --admin-secret ${HASURA_GRAPHQL_ADMIN_SECRET}
+migrate-apply:
+	npx hasura migrate apply --endpoint ${HASURA_STAGING_ENDPOINT} --admin-secret ${HASURA_GRAPHQL_ADMIN_SECRET}
 
-metadata:
-	npx hasura-cli metadata apply --endpoint ${HASURA_STAGING_ENDPOINT} --admin-secret ${HASURA_GRAPHQL_ADMIN_SECRET}
-	echo "npx hasura metadata reload and hasura migrate status too..."
+metadata-apply:
+	npx hasura metadata apply --endpoint ${HASURA_STAGING_ENDPOINT} --admin-secret ${HASURA_GRAPHQL_ADMIN_SECRET}
